# tg_ai_blocker

./: .dockerfile  .env.example  .gitignore  CLAUDE.md  CNAME  Dockerfile  PRD.md  _headers  article_announcement.html  config.yaml  deploy.sh  docker-compose.yml  index.html  make.bat  make.ps1  output.css  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_custom_gateway.py  test_markdown_sanitization.py  test_markdown_simple.py  test_specific_case.py
.cursor/agents/: code-reviewer.md
.cursor/commands/: logfire-trace.md  optimize-spam-examples.md  update-llm-and-user-docs.md
.cursor/rules/: general.mdc  logfire.mdc  memory-bank.mdc  spam-tactics.mdc
.github/workflows/: deploy.yml  deploy_landing.yml
app/: PRD.md  config.yaml  main.py  payments.py  server.py  spam_classifier.py  star_payments.py  stats.py  test.ipynb  updates_filter.py  utils.py
app/common/: bot.py  database.py  database_upstash.py  dp.py  llms.py  mp.py  yandex_logging.py
app/handlers/: __init__.py  callback_handlers.py  command_handlers.py  message_handlers.py  payment_handlers.py  private_handlers.py  referral_handlers.py  status_handlers.py
app/migrations/: migrate.py
app/scripts/: migrate_spam_examples.py  migrate_to_postgres.py
docs/: broadcast_silent_mode.md  channel_post_silent_mode.md
landing_page/: build.js  package-lock.json  package.json  tailwind.config.js  test.html
landing_page/src/: index-en.html  index-ru.html  index.html  input.css  sitemap.xml
memory-bank/: activeContext.md  confirmedSpamExamples.md  opsPlaybook.md  productContext.md  progress.md  projectbrief.md  pydantic-ai-migration.md  spamTactics.md  systemPatterns.md  techContext.md  vc_ru_article.md
scripts/: audit_i18n.py  broadcast_remote.sh  broadcast_sent.ids.probation-broadcast-backup  broadcast_updates.py  check_admins_credits.py  check_admins_without_groups.py  clean_spam_examples.py  cleanup_admin_spam_examples.py  count_disabled_moderation.py  eval_llm_models.py  export_admin_ids.sh  find_user_traces.py  list_admins.py  logfire_tag_counts.py  run_broadcast_on_vds.sh  sync-remote-config.sh
src/app/: agents.py  bot_commands.py  i18n.py  logging_setup.py  main.py  server.py  spam_classifier.py  types.py  utils.py
src/migrations/: migrate.py
src/tests/: conftest.py  test_fast_types.py  test_mixpanel.py
src/tg_ai_blocker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  linked_channel_test.csv  test_.py  test_filter.py  test_i18n_keys_audit.py  test_main.py  test_mixpanel.py  test_server.py  test_updates.py
tests/background_jobs/: test_low_balance.py  test_no_rights.py
tests/billing/: test_low_balance_jobs.py
tests/common/: test_format_display.py  test_get_dotted_path.py  test_linked_channel.py  test_linked_channel_mention.py  test_llm_config.py  test_logfire_lookup.py  test_notifications.py  test_spam_classifier.py  test_stories.py  test_telegram_logging_handler.py
tests/database/: test_admin_operations.py  test_group_operations.py  (+3 more)
(+116 files in other folders)
