[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg_ai_blocker"
version = "0.1.0"
authors = [
    { name = "Leshchenko", email = "leshchenko@example.com" }
]
description = "Telegram AI spam blocker"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["src"]

[tool.pyright]
include = ["src"]
extraPaths = ["src", "."]
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false
