[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg_ai_blocker"
version = "0.1.0"
authors = [
    { name = "Leshchenko", email = "leshchenko@gmail.com" }
]
description = "Telegram AI spam blocker"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "aiogram",
    "mixpanel",
    "pyyaml",
    "asyncpg",
    "logfire",
    "tenacity",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src"]
exclude = ["tests"]
extraPaths = ["src", "."]
pythonVersion = "3.13"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.logfire]
ignore_no_config = true
