[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg_ai_blocker"
version = "0.1.0"
authors = [
    { name = "Leshchenko", email = "leshchenko@gmail.com" }
]
description = "Telegram AI spam blocker"
requires-python = ">=3.14"
dependencies = [
    "aiohttp",
    "aiogram",
    "mixpanel",
    "pyyaml",
    "asyncpg",
    "logfire",
    "tenacity",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "python-dotenv",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src"]
exclude = ["tests"]
extraPaths = ["src", "."]
pythonVersion = "3.14"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff.lint]
# Allow star imports in __init__.py files (standard Python practice)
extend-ignore = [
    "F403",  # `from .module import *` used; unable to detect undefined names
]

[tool.ruff.lint.per-file-ignores]
# Allow imports after environment setup in scripts
"scripts/*.py" = ["E402"]
# Allow imports after path setup in integration tests
"tests/integration/*.py" = ["E402"]
# Allow imports after environment and path setup in main app and migrations
"src/app/main.py" = ["E402"]
"src/migrations/*.py" = ["E402"]
"tests/conftest.py" = ["E402"]
# Allow unused database connections in tests (they're used implicitly)
"tests/**/*.py" = ["F841"]

[tool.logfire]
ignore_no_config = true
